# config/packages/nelmio_api_doc.yaml
@@ -4,6 +4,14 @@ nelmio_api_doc:
             title: DV Campus checklist
             description: This is an awesome app!
             version: 1.0.0
+        securityDefinitions:
+          Bearer:
+            type: apiKey
+            description: 'Value: Bearer {jwt}'
+            name: Authorization
+            in: header
+        security:
+          - Bearer: [ ]
         paths:
             /api/login_check:
               post:
@@ -12,6 +20,7 @@ nelmio_api_doc:
                   - Authentication
                 produces:
                   - application/json
+                security: []
                 parameters:
                   - name: Credentials
                     description: User credentials
@@ -49,6 +58,7 @@ nelmio_api_doc:
                   - Authentication
                 produces:
                   - application/json
+                security: []
                 parameters:
                   - name: User details
                     description: User credentials
@@ -77,6 +87,37 @@ nelmio_api_doc:
                             type: string
                   '400':
                     description: Invalid data
+                    schema:
+                      type: object
+                      properties:
+                        error:
+                          type: string
+
+            /api/user/list:
+              get:
+                description: User List
+                tags:
+                  - User
+                produces:
+                  - application/json
+                responses:
+                  '200':
+                    description: List of users
+                    schema:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          username:
+                            type: string
+                          role:
+                            type: array
+                            items:
+                              type: string
+                  '401':
+                    description: Access denied
                     schema:
                       type: object
                       properties:
